Fix: `ColonyHomeLayout` overflow issue

--- a/src/modules/dashboard/components/ColonyHome/ColonyHomeLayout.css
+++ b/src/modules/dashboard/components/ColonyHome/ColonyHomeLayout.css
@@ -1,5 +1,6 @@
 .main {
   composes: stretch from '~styles/layout.css';
+  margin-top: -15px;
   overflow: visible;
 }
 
